--- a/.github/workflows/simple.yml
+++ b/.github/workflows/simple.yml
@@ -12,9 +12,9 @@ jobs:
         run: |
            node -v 
            npm -v
+           python -v
       - name: python Command 
         run: |
           import platform 
-          print
-          (platform.processor())
+          print platform.processor()
         shell: python
