--- a/.github/workflows/simple.yml
+++ b/.github/workflows/simple.yml
@@ -18,8 +18,9 @@ jobs:
           import platform 
           print(platform.processor())
         shell: python
-  run-windwos-commands:
+  run-windows-commands:
     runs-on: windows-latest
+    needs: ["run-shell-command"]
     steps:
       - name: Directory PowerShell
         run: Get-Location 
